created basic markup

--- a/package.json
+++ b/package.json
@@ -28,27 +28,26 @@
   },
   "dependencies": {
     "@vimeo/player": "^2.16.4",
-    "lodash.throttle": "^4.1.1",
-    "simplelightbox": "^2.10.3"
+    "lodash.throttle": "^4.1.1"
   },
   "customDistStructure": {
-  "config": {
-    
-    ".js": "js",
-    ".js.map": "js",
-    ".css": "css",
-    ".css.map": "css",
-    "images": [
-      ".jpg",
-      ".png"
-    ],
-    
-    ".fileExtension": "folder/in/dist",
-    "folder/in/dist": [ ".file", ".extensions" ]
-  },
-  "options": {
-    "development": true
+    "config": {
+      ".js": "js",
+      ".js.map": "js",
+      ".css": "css",
+      ".css.map": "css",
+      "images": [
+        ".jpg",
+        ".png"
+      ],
+      ".fileExtension": "folder/in/dist",
+      "folder/in/dist": [
+        ".file",
+        ".extensions"
+      ]
+    },
+    "options": {
+      "development": true
+    }
   }
 }
-}
-
