--- a/package.json
+++ b/package.json
@@ -3,20 +3,20 @@
   "version": "1.1.0",
   "description": "",
   "main": "index.js",
-  "homepage": "https://zeddjke.github.io/goit-js-hw-08",
+  "homepage": "https://zeddjke.github.io/human-chat",
   "scripts": {
     "start": "parcel src/*.html",
-    "build": "parcel build src/*.html --public-url /goit-js-hw-08/"
+    "build": "parcel build src/*.html --public-url /human-chat/"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/zeddjke/goit-js-hw-08"
+    "url": "git+https://github.com/zeddjke/human-chat"
   },
   "keywords": [],
   "author": "Oleksii Kikot <oleksii.kikot@yahoo.com>",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/zeddjke/goit-js-hw-08/issues"
+    "url": "https://github.com/zeddjke/human-chat/issues"
   },
   "devDependencies": {
     "parcel-bundler": "^1.12.5",
